--- a/smu digital.html
+++ b/smu digital.html
@@ -16,6 +16,8 @@
       <li><a href="w1/w6.html">6주차</a></li>
       <li><a href="w1/w7.html">7주차</a></li>
       <li><a href="w1/w8.html">8주차</a></li>
-    </ul>
+
+      li>a>($asdsafsaasf)
+
   </body>
 </html>
