--- a/w5/w5.html
+++ b/w5/w5.html
@@ -7,7 +7,14 @@
     <title>dc231:w5</title>
   </head>
   <body>
-    아아... 이것은 5주차 문서다
+    <h1>5주차 문서입니다</h1>
+    <h2>금요일 수업</h2>
+    <ul>
+      <li><a href="five/f_gh1.html">f_gh1</a></li>
+      <li><a href="five/f_gh2.html">f_gh2</a></li>
+      <li><a href="five/f_gh3.html">f_gh3</a></li>
+      <li><a href="five/f_gh4.html">f_gh4</a></li>
+    </ul>
 
     <a href="../smu digital.html">돌고돌아돌아가</a>
   </body>
