디자인 컴퓨팅 재미따

--- a/w4/w4.html
+++ b/w4/w4.html
@@ -10,5 +10,10 @@
     아아... 이것은 4주차 문서다
 
     <a href="../smu digital.html">돌고돌아돌아가</a>
+    <ul>
+      <li><a href="./stp2.html">stp2</a></li>
+      <li><a href="./stp3.html">stp3</a></li>
+      <li><a href="./stp4.html">stp4</a></li>
+    </ul>
   </body>
 </html>
